other-mpol/label-nodes-cri/.kyverno-test/baseline-resource.yaml
apiVersion: v1
kind: Node
metadata: {name: baseline-node}
status: {nodeInfo: {containerRuntimeVersion: containerd://1.7.0}}
