other-mpol/label-nodes-cri/.kyverno-test/exception-resource.yaml
apiVersion: v1
kind: Node
metadata: {name: exception-node, labels: {kubernetes.io/os: linux}}
status: {nodeInfo: {containerRuntimeVersion: containerd://1.7.0}}
